fixed overflow

--- a/01-Particles/styles.css
+++ b/01-Particles/styles.css
@@ -6,10 +6,14 @@
 
 body{
     height: 100%;
-    width: 100%;;
+    width: 100%;
 }
+
 #canvas1{
     background-color: black;
-    width: 100vw;
-    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
